fixed: google auth

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-CLIENT_ID = 273571730540-vqihqjgqqlaq4pc5ke9ifgm8g20n2a10.apps.googleusercontent.com
-CLIENT_SECRET = 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
-MONGO_URI = mongodb+srv://delaquarsh:Equarshie85@delashop.yvqdi.mongodb.net/
+CLIENT_ID=273571730540-vqihqjgqqlaq4pc5ke9ifgm8g20n2a10.apps.googleusercontent.com
+CLIENT_SECRET=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
+MONGO_URI=mongodb+srv://delaquarsh:Equarshie85@delashop.yvqdi.mongodb.net/
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=nWVIRQTnr7gTsGKxdxIW9Lv8dkqaLqL/RSBSon79lds=
