--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/Feed.jsx", "components/Form.jsx", "components/Nav.jsx", "components/Provider.jsx", "app/api/auth/[...nextauth]/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/Feed.jsx", "components/Form.jsx", "components/Nav.jsx", "components/Provider.jsx", "app/api/auth/[...nextauth]/route.js", "components/PromptCard.jsx"],
   "exclude": ["node_modules"]
 }
