--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@tanstack/react-query": "^4.29.13",
+    "@tanstack/react-query-devtools": "^4.29.13",
     "@types/axios": "^0.14.0",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
